# JaipurTD

./: .gitignore  Makefile  ci.yaml  evaluate.py  play_random.py  pyproject.toml  setup.py
.github/workflows/: main.yml
ai/: agents.py  alpha_mcts.py  alpha_network.py  alpha_trainer.py  mcts.py  network.py  trainer.py
benchmarks/: bench_engine.py
jaipur/: __init__.py  _engine.pyx  agents.py  cards.py  encoding.py  game.py  game_fast.py
tests/: test_game.py
web/: app.py  tournament.html
web/templates/: game.html
